fix: why take test spacing

--- a/src/components/Home/WhyTakeTest/WhyTakeTest.module.css
+++ b/src/components/Home/WhyTakeTest/WhyTakeTest.module.css
@@ -20,6 +20,7 @@
   font-weight: 700;
   line-height: 1.05;
   color: var(--color-gray-0);
+  margin-top: 100px;
 }
 
 @media screen and (max-width: 1020px) {
